--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h4>Sample App</h4>
+      <hr>
+      <button type="button" class="btn btn-primary">First</button>
+      <button type="button" class="btn btn-secondary">Second</button>
+    </div>
+  </div>
+</div>
