--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="col-xs-12">
       <h4>Sample App</h4>
       <hr>
-      <button type="button" class="btn btn-primary">First</button>
-      <button type="button" class="btn btn-secondary">Second</button>
+      <button type="button" class="btn btn-primary" appTooltip="First Button Tooltip">First</button>
+      <button type="button" class="btn btn-secondary" appTooltip="Second Button Tooltip">Second</button>
     </div>
   </div>
 </div>
